# AuraScholar

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/desktop/: .gitignore  README.md  electron.vite.config.ts  index.html  package.json  tsconfig.node.json  vite.config.ts
apps/desktop/electron/: main.ts  preload.ts  shared.ts
apps/desktop/electron/main/: citation-bridge.ts  db.ts  ipc.ts  platform.ts  research-browser.ts  smoke.ts
apps/desktop/scripts/: smoke-electron.mjs
apps/desktop/src/: App.test.ts  App.tsx  app.css  aura.d.ts  clipboard.ts  download.ts  keyboard.ts  main.tsx  shortcut-labels.ts  storage.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AppErrorBoundary.tsx  CitationGraphView.tsx  ConfirmDialog.tsx  ImportConfirmDialog.tsx  InlineNotice.tsx  MetadataEditor.tsx  useModalFocusTrap.ts
apps/desktop/src/pages/: DiscoveryPage.tsx  FlashcardsPage.tsx  GraphPage.tsx  HomepagePage.tsx  LibraryPage.tsx  ReaderPage.tsx  SentinelPage.tsx  SettingsPage.tsx  SnippetsPage.tsx  SpatialCanvasPage.tsx
apps/gallery/: index.html  package.json  vite.config.ts
apps/gallery/src/: Gallery.tsx  main.tsx
docs/: SPATIAL_CANVAS_PRD.md  ui-review-2026-07.md  visual-direction.md  word-integration-feasibility.md
(+74 files in other folders)
